--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,10 @@
     }
   },
   "require": {
-    "spryker/kernel": "^1.0.0-RC1",
+    "spryker/kernel": "^1.0.0-RC2",
     "spryker/sales": "^1.0.0-RC1",
-    "spryker/symfony": "^1.0.0-RC1"
+    "spryker/symfony": "^1.0.0-RC1",
+    "spryker/application": "^1.0.0-RC2"
   },
   "description": "payment bundle",
   "license": "proprietary",
