updated minimum stability for composer files

--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,11 @@
   },
   "description": "payment bundle",
   "license": "proprietary",
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "prefer-stable": true,
   "extra": {
     "branch-alias": {
-      "dev-master": "1.0.x-dev"
+      "dev-master": "2.0.x-dev"
     }
   }
 }
