--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,10 @@
     }
   },
   "require": {
+    "spryker/application": "^2.0.0",
     "spryker/kernel": "^2.0.0",
     "spryker/sales": "^2.0.0",
-    "spryker/symfony": "^2.0.0",
-    "spryker/application": "^2.0.0"
+    "spryker/symfony": "^2.0.0"
   },
   "description": "payment bundle",
   "license": "proprietary",
