--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
     "spryker/zed-request": "^3.0.0"
   },
   "require-dev": {
+    "spryker/calculation": "*",
     "spryker/checkout": "*",
     "spryker/code-sniffer": "*",
     "spryker/sales": "*",
-    "spryker/testify": "*",
-    "spryker/calculation": "*"
+    "spryker/testify": "*"
   },
   "suggest": {
     "spryker/checkout": "If you want to use Checkout plugins.",
