--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "php": ">=7.1",
     "spryker/kernel": "^3.0.0",
     "spryker/propel-orm": "^1.0.0",
+    "spryker/sales": "^8.0.0",
     "spryker/symfony": "^3.0.0",
     "spryker/zed-request": "^3.0.0"
   },
@@ -13,7 +14,6 @@
     "spryker/calculation": "*",
     "spryker/checkout": "*",
     "spryker/code-sniffer": "*",
-    "spryker/sales": "*",
     "spryker/testify": "*"
   },
   "suggest": {
