--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,8 @@
 # OS
 .DS_Store
 
-# grunt stuff
-.grunt
-.sass-cache
-/node_modules/
-/tests/_log/*
-!/tests/_log/.gitkeep
+/vendor
+/composer.lock
+
+/tests/_output/*
+!/tests/_output/.gitkeep
