--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "spryker/kernel": "^3.30.0",
     "spryker/propel-orm": "^1.0.0",
     "spryker/sales": "^8.0.0 || ^10.0.0 || ^11.0.0",
+    "spryker/store": "^1.4.0",
     "spryker/symfony": "^3.0.0",
     "spryker/zed-request": "^3.0.0"
   },
