--- a/codeception.yml
+++ b/codeception.yml
@@ -2,6 +2,7 @@ namespace: SprykerTest
 
 include:
     - tests/SprykerTest/Zed/Payment
+    - tests/SprykerTest/Shared/Payment
 
 paths:
     tests: tests
