CC-5884 implement test cases

--- a/tests/SprykerTest/Zed/Payment/codeception.yml
+++ b/tests/SprykerTest/Zed/Payment/codeception.yml
@@ -24,6 +24,7 @@ suites:
                 - \SprykerTest\Shared\Testify\Helper\DependencyHelper
                 - \SprykerTest\Shared\Propel\Helper\TransactionHelper
                 - \SprykerTest\Shared\Payment\Helper\PaymentDataHelper
+                - \SprykerTest\Shared\Store\Helper\StoreDataHelper
 
     Dependency:
         path: Dependency
