--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
   "require-dev": {
     "spryker/calculation": "*",
     "spryker/checkout": "*",
+    "spryker/code-sniffer": "*",
     "spryker/propel": "*",
     "spryker/testify": "*"
   },
