--- a/composer.json
+++ b/composer.json
@@ -34,8 +34,7 @@
     "suggest": {
         "spryker/calculation": "To correctly calculate multiple payment methods",
         "spryker/checkout": "If you want to use Checkout plugins.",
-        "spryker/installer": "If you want to use Installer plugins: ^4.0.0.",
-        "spryker/event": "If you want to use Event plugins, minimum required version: 2.0.0"
+        "spryker/installer": "If you want to use Installer plugins: ^4.0.0."
     },
     "autoload": {
         "psr-4": {
