--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "require": {
         "php": ">=7.4",
         "psr/http-message": "^1.0.0",
-        "spryker/checkout-extension": "^1.2.0",
+        "spryker/checkout-extension": "dev-feature/cc-14610/dev-unzer-psp as 1.4.0",
         "spryker/guzzle": "^2.2.0",
         "spryker/kernel": "^3.30.0",
         "spryker/locale": "^3.0.0",
