--- a/tests/SprykerTest/Service/Payment/codeception.yml
+++ b/tests/SprykerTest/Service/Payment/codeception.yml
@@ -18,3 +18,4 @@ suites:
         modules:
             enabled:
                 - Asserts
+                - \SprykerTest\Service\Testify\Helper\ServiceHelper
