FRW-172 Upgrade to Codeception 5 (#9542)
FRW-172 Codeception Upgrade to latest version

--- a/tests/SprykerTest/Zed/Payment/codeception.yml
+++ b/tests/SprykerTest/Zed/Payment/codeception.yml
@@ -4,7 +4,7 @@ paths:
     tests: .
     data: ../../../_data
     support: _support
-    log: ../../../_output
+    output: ../../../_output
 
 coverage:
     enabled: true
@@ -14,7 +14,7 @@ coverage:
 suites:
     Business:
         path: Business
-        class_name: PaymentBusinessTester
+        actor: PaymentBusinessTester
         modules:
             enabled:
                 - Asserts
@@ -29,7 +29,7 @@ suites:
 
     Dependency:
         path: Dependency
-        class_name: PaymentDependencyTester
+        actor: PaymentDependencyTester
         modules:
             enabled:
                 - Asserts
