--- a/tests/SprykerTest/Client/Payment/codeception.yml
+++ b/tests/SprykerTest/Client/Payment/codeception.yml
@@ -3,7 +3,7 @@ paths:
     tests: .
     data: ../../../_data
     support: _support
-    log: ../../../_output
+    output: ../../../_output
 
 coverage:
     enabled: true
@@ -13,7 +13,7 @@ coverage:
 suites:
     Client:
         path: .
-        class_name: PaymentClientTester
+        actor: PaymentClientTester
         modules:
             enabled:
                 - Asserts
