--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "require": {
         "php": ">=8.0",
         "psr/http-message": "^1.0.0",
+        "spryker/acl-merchant-portal-extension": "^1.0.0",
         "spryker/checkout-extension": "^1.2.0",
         "spryker/guzzle": "^2.2.0",
         "spryker/kernel": "^3.30.0",
