--- a/tests/SprykerTest/Zed/Payment/codeception.yml
+++ b/tests/SprykerTest/Zed/Payment/codeception.yml
@@ -24,7 +24,10 @@ suites:
                 - \SprykerTest\Shared\Testify\Helper\DependencyHelper
                 - \SprykerTest\Shared\Propel\Helper\TransactionHelper
                 - \SprykerTest\Shared\Payment\Helper\PaymentDataHelper
+                - \SprykerTest\Service\Container\Helper\ContainerHelper
+                - \SprykerTest\Shared\Store\Helper\StoreDependencyHelper
                 - \SprykerTest\Shared\Store\Helper\StoreDataHelper
+                - \SprykerTest\Shared\Testify\Helper\DataCleanupHelper
                 - \SprykerTest\Shared\Store\Helper\StoreReferenceHelper
 
     Dependency:
