--- a/tests/SprykerTest/Zed/Payment/codeception.yml
+++ b/tests/SprykerTest/Zed/Payment/codeception.yml
@@ -29,6 +29,7 @@ suites:
                 - \SprykerTest\Shared\Store\Helper\StoreDataHelper
                 - \SprykerTest\Shared\Testify\Helper\DataCleanupHelper
                 - \SprykerTest\Shared\Store\Helper\StoreReferenceHelper
+                - \SprykerTest\Zed\Testify\Helper\Business\BusinessHelper
 
     Dependency:
         path: Dependency
