--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=8.1",
         "psr/http-message": "^1.0.0",
         "spryker/acl-merchant-portal-extension": "^1.0.0",
+        "spryker/application": "^3.0.0",
         "spryker/checkout-extension": "^1.2.0",
         "spryker/guzzle": "^2.2.0",
         "spryker/kernel": "^3.30.0",
