--- a/tests/SprykerTest/Client/Payment/codeception.yml
+++ b/tests/SprykerTest/Client/Payment/codeception.yml
@@ -19,6 +19,8 @@ suites:
                 - Asserts
                 - \SprykerTest\Shared\Testify\Helper\Environment
                 - \SprykerTest\Shared\Testify\Helper\ConfigHelper
+                - \SprykerTest\Client\Testify\Helper\ConfigHelper
                 - \SprykerTest\Shared\Testify\Helper\LocatorHelper
                 - \SprykerTest\Shared\Testify\Helper\DependencyHelper
+                - \SprykerTest\Client\Testify\Helper\DependencyProviderHelper
                 - \SprykerTest\Client\Testify\Helper\ClientHelper
