ACP-3375 Added test to ensure additionalPaymentData is forwarded to PSP Apps. (#11011)
ACP-3375 Allow Customers Export Custom Fields to Stripe.

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "spryker/code-sniffer": "*",
         "spryker/container": "*",
         "spryker/propel": "*",
+        "spryker/ramsey-uuid": "*",
         "spryker/testify": "*"
     },
     "suggest": {
