ACP-2626: Stripe for marketplace payment flow, OMS updates, payouts to Stripe for merchants (#10998)
ACP-2626 Stripe Marketplace Payment Flow- Marketplace OMS Workflow & Transfers to Merchants

--- a/resources/api/asyncapi/payment.yml
+++ b/resources/api/asyncapi/payment.yml
@@ -218,12 +218,25 @@ components:
                     type: string
                 paymentAuthorizationEndpoint:
                     type: string
-            required:
-                - name
-                - providerName
-                - checkoutOrderTokenUrl
-                - checkoutRedirectUrl
-
+                paymentMethodAppConfiguration:
+                    type: object
+                    properties:
+                        baseUrl:
+                            type: string
+                            example: www.example.com
+                        endpoints:
+                            type: array
+                            properties:
+                                name:
+                                    type: string
+                                    example:
+                                        - authorization
+                                        - transfer
+                                path:
+                                    type: string
+                                    example:
+                                        - /authorization
+                                        - /transfer
         PaymentPayload:
             type: object
             properties:
