--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "spryker/guzzle": "^2.2.0",
         "spryker/kernel": "^3.30.0",
         "spryker/locale": "^3.0.0 || ^4.0.0",
+        "spryker/log": "^3.0.0",
         "spryker/message-broker": "^1.0.0",
         "spryker/message-broker-extension": "^1.0.0",
         "spryker/oms": "^7.0.0 || ^8.0.0 || ^10.0.0 || ^11.0.0",
