ACP-3507 the APIs to enable projects embed payment elements to headless frontends (#11043)
ACP-3507 Investigate how the APIs to Enable Projects embed Payment Elements to Yves or in Headless Scenario should be built

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "spryker/checkout-extension": "^1.2.0",
         "spryker/guzzle": "^2.2.0",
         "spryker/kernel": "^3.30.0",
+        "spryker/kernel-app": "^1.0.0",
         "spryker/locale": "^3.0.0 || ^4.0.0",
         "spryker/log": "^3.0.0",
         "spryker/message-broker": "^1.0.0",
